# mirrorml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
bench/: README.md
bench/pairs/replayed_bugs/breck_feature_removed_at_serving/: meta.yaml  online.sql
bench/pairs/replayed_bugs/breck_rpc_error_sentinel/: meta.yaml  offline.py  online.py
bench/pairs/replayed_bugs/fp16_train_infer_precision_mismatch/: meta.yaml
bench/pairs/replayed_bugs/pit_leakage_forward_asof/: meta.yaml  offline.py  online.py
bench/pairs/synthetic/aggregation_function/aggregation_function_000/: meta.yaml  online.sql
bench/pairs/synthetic/aggregation_function/aggregation_function_001/: meta.yaml  online.sql
bench/pairs/synthetic/aggregation_function/aggregation_function_002/: meta.yaml  offline.sql
bench/pairs/synthetic/aggregation_function/aggregation_function_003/: meta.yaml  offline.sql  online.sql
bench/pairs/synthetic/aggregation_function/cross_framework_aggregation_function_sum_vs_avg/: meta.yaml
bench/pairs/synthetic/aggregation_function/cross_framework_polars_sum_vs_sql_avg/: meta.yaml
bench/pairs/synthetic/aggregation_function/window_aggregation_function_mean_vs_sum/: meta.yaml  online.sql
bench/pairs/synthetic/as_of_join_direction/as_of_join_direction_000/: meta.yaml  offline.py  online.py
bench/pairs/synthetic/as_of_join_direction/as_of_join_direction_001/: meta.yaml  online.py
bench/pairs/synthetic/as_of_join_direction/as_of_join_direction_002/: meta.yaml  offline.py
bench/pairs/synthetic/identity/identity_asof_join/: meta.yaml  (+1 more)
bench/scripts/: __init__.py  generate_synthetic.py  latency.py  pair.py  run_eval.py  stats_check.py
demo/: README.md  check.py  offline_features.py  online_features.py
docs/concepts/: category_support.md  divergence_taxonomy.md  dtype_vocabulary.md
examples/github-action/: README.md  ci.yml  mirrorml_check.py
src/mirrorml/: __init__.py  _taxonomy.py  exceptions.py
src/mirrorml/cli/: __init__.py  _pair.py  _render.py  app.py
src/mirrorml/diff/: __init__.py  classify.py  engine.py
src/mirrorml/fingerprint/: __init__.py  _typing.py  canonical.py  dtypes.py  hash.py  migrate.py  operations.py  schema.py  udf_hash.py
src/mirrorml/stats/: __init__.py
src/mirrorml/tracers/: __init__.py  _pandas_wrappers.py  _polars_wrappers.py  _sql_dtypes.py  _sql_walker.py  _trace_common.py  pandas_tracer.py  polars_tracer.py  sql_tracer.py
tests/: conftest.py
tests/e2e/: test_demo.py
tests/golden/fingerprint/: minimal_source_only.json
tests/property/diff/: test_diff_properties.py
tests/property/fingerprint/: test_determinism.py
tests/property/tracers/: test_cross_framework_equivalence.py
tests/unit/: test_cli.py  test_exceptions.py  test_public_api.py  test_stubs.py  test_taxonomy.py
tests/unit/bench/: test_generator.py  test_latency.py  test_pair.py  test_run_eval.py  test_stats_check.py
tests/unit/cli/: test_app.py
tests/unit/diff/: test_alignment.py  test_engine.py
tests/unit/fingerprint/: test_build.py  test_canonical.py  test_dtypes.py  test_golden.py  test_hash.py  test_migrate.py  test_schema.py  test_udf_hash.py
tests/unit/stats/: test_compare.py
tests/unit/tracers/pandas/: test_aggregations.py  test_wrappers.py
tests/unit/tracers/polars/: test_wrappers.py
tests/unit/tracers/sql/: test_dtypes.py  test_joins.py  test_walker.py  test_windows.py
(+151 files in other folders)
